<resources>
    <string name="app_name">StudyHelper</string>
    <string name="player_1">Player_1</string>
    <string name="player_2">Player 2</string>
    <string name="score">Score</string>
    <string name="who">"'s turn"</string>
    <string name="points_this_turn">Points for this turn</string>
    <string name="roll_die">Roll Die</string>
    <string name="end_turn">End Turn</string>
    <string name="new_game">New Game</string>
    <string name="setting">setting</string>
    <string name="about">about</string>
    <string name="label">p</string>
    <string name="zero">0</string>
    <string name="SettingsActivity_title">Settings</string>
    <string name="SecondActivity_title">I Love Study!</string>
    <string name="ThirdActivity_title">Check Sapling State</string>
    <string name="setting_win_score_title">Set Win Score</string>
    <string name="setting_win_score_summary">Set the maximum score to win</string>
    <string name="setting_background_title">Set background</string>
    <string name="setting_background_summary">Set a new background</string>
    <string name="setting_sides_title">Set Sides</string>
    <string name="start_study_button">Start Study!</string>
    <string name="study_now_button">Study Now!</string>
    <string name="check_my_sapling_button1">Sapling State</string>
    <string name="check_my_sapling_button2">Check My Sapling</string>
    <string name="display_exp_button">Display EXP</string>
    <string name="study_label">I want to study for</string>
    <string name="resetzero">00:00:00</string>
    <string name="mins">minutes</string>
    <string name="back_to_home_button">Back to Homepage</string>
    <string name="reset_tree_button">Plant a new Sapling</string>
    <string name="setting_sides_summary">Set how many sides of a die(minimum 2 and maximum 6)</string>
    <string name="setting_font_title">Set Large Font</string>
    <string name="setting_font_summary">Increase the size of font </string>
    <string-array name="background_key">
        <item>ocean</item>
        <item>flower</item>
        <item>mountain</item>
        <item>sky</item>
    </string-array>
    <string-array name="background_value">
        <item>ocean</item>
        <item>flower</item>
        <item>mountain</item>
        <item>sky</item>
    </string-array>
</resources>
